[gd_scene load_steps=8 format=2]

[ext_resource path="res://introduction.gd" type="Script" id=1]
[ext_resource path="res://sprites/player_stand.png" type="Texture" id=3]
[ext_resource path="res://ui/skip_instruction.tscn" type="PackedScene" id=4]
[ext_resource path="res://magic_monster.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/speech.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerInteraction/PlayerSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 706, 468 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerInteraction/PlayerSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerInteraction/PlayerSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "shocked"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerInteraction/PlayerSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 706, 468 ), Vector2( 718, 462 ), Vector2( 706, 468 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerInteraction/PlayerSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -0.1, 0.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerInteraction/PlayerSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 12.3391, 0.0 ]
}

[node name="Introduction" type="Node2D"]
script = ExtResource( 1 )

[node name="SkipInstruction" parent="." instance=ExtResource( 4 )]
show_on_ready = true

[node name="PlayerInteraction" type="Node2D" parent="."]

[node name="PlayerSprite" type="Sprite" parent="PlayerInteraction"]
position = Vector2( 706, 468 )
scale = Vector2( 0.1, 0.1 )
z_index = 5
texture = ExtResource( 3 )

[node name="Speech1" parent="PlayerInteraction" instance=ExtResource( 8 )]
position = Vector2( 755, 392 )
is_skippable = true
text = "It has been so long since I've
been to a party..."

[node name="Speech2" parent="PlayerInteraction" instance=ExtResource( 8 )]
position = Vector2( 755, 392 )
is_playing = false
is_skippable = true
show_on_ready = false
text = "What is this magical monster?!"

[node name="Speech3" parent="PlayerInteraction" instance=ExtResource( 8 )]
position = Vector2( 755, 392 )
is_playing = false
is_skippable = true
show_on_ready = false
text = "Wow! My house!"

[node name="Speech4" parent="PlayerInteraction" instance=ExtResource( 8 )]
position = Vector2( 755, 392 )
is_playing = false
is_skippable = true
show_on_ready = false
text = "But I have no one to party with."

[node name="PlayerPlayer" type="AnimationPlayer" parent="PlayerInteraction"]
root_node = NodePath("../..")
anims/RESET = SubResource( 10 )
anims/shocked = SubResource( 11 )

[node name="MonsterInteraction" type="Node2D" parent="."]

[node name="MagicMonster" parent="MonsterInteraction" instance=ExtResource( 7 )]
position = Vector2( 278, 370 )

[node name="Speech1" parent="MonsterInteraction" instance=ExtResource( 8 )]
position = Vector2( 352, 314 )
is_playing = false
is_skippable = true
show_on_ready = false
text = "Then let's throw a party for everyone!!"

[node name="Speech2" parent="MonsterInteraction" instance=ExtResource( 8 )]
position = Vector2( 352, 314 )
is_playing = false
is_skippable = true
show_on_ready = false
text = "Have you forgotten about
the people around you?"

[node name="Speech3" parent="MonsterInteraction" instance=ExtResource( 8 )]
position = Vector2( 352, 300 )
is_playing = false
is_skippable = true
show_on_ready = false
text = "Your neighbors! Your friends!
Close or not, they are part
of your community."

[node name="Speech4" parent="MonsterInteraction" instance=ExtResource( 8 )]
position = Vector2( 352, 300 )
is_playing = false
is_skippable = true
show_on_ready = false
text = "Go, go, go invite them now!
They wanna party too,
not just you!"

[connection signal="tree_exited" from="PlayerInteraction/Speech1" to="MonsterInteraction/MagicMonster" method="appear"]
[connection signal="tree_exited" from="PlayerInteraction/Speech3" to="PlayerInteraction/Speech4" method="play"]
[connection signal="tree_exited" from="PlayerInteraction/Speech4" to="MonsterInteraction/Speech2" method="play"]
[connection signal="appeared" from="MonsterInteraction/MagicMonster" to="MonsterInteraction/Speech1" method="play"]
[connection signal="tree_exited" from="MonsterInteraction/Speech1" to="." method="shock"]
[connection signal="tree_exited" from="MonsterInteraction/Speech1" to="PlayerInteraction/Speech2" method="play"]
[connection signal="tree_exited" from="MonsterInteraction/Speech2" to="MonsterInteraction/Speech3" method="play"]
[connection signal="tree_exited" from="MonsterInteraction/Speech3" to="MonsterInteraction/Speech4" method="play"]
[connection signal="tree_exited" from="MonsterInteraction/Speech4" to="SkipInstruction" method="skip"]
